--- a/index.html
+++ b/index.html
@@ -66,16 +66,6 @@
         .ingredient-bubble:hover {
             transform: translateY(-5px) rotate(5deg);
         }
-        
-        .spice-path {
-            position: absolute;
-            width: 100%;
-            height: 100px;
-            background: url("data:image/svg+xml,%3Csvg width='100' height='20' viewBox='0 0 100 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 10 C 20 20, 40 0, 60 10 C 80 20, 100 0, 100 10 L 100 20 L 0 20 Z' fill='%23FF6B6B' /%3E%3C/svg%3E") repeat-x;
-            background-size: 100px 100px;
-            bottom: -50px;
-            z-index: -1;
-        }
     </style>
 </head>
 <body class="min-h-screen">
@@ -89,11 +79,10 @@
 
     <!-- Header -->
     <header class="relative bg-gradient-to-r from-red-400 via-yellow-400 to-pink-400 py-12 px-6 text-center overflow-hidden">
-        <div class="spice-path"></div>
         <h1 class="title-font text-5xl md:text-6xl font-bold text-white mb-4 pulse">My Flavorful Journey</h1>
         <p class="text-xl text-white opacity-90 max-w-2xl mx-auto">A delicious adventure through my kitchen experiments, successes, and happy accidents!</p>
         
-        <div class="absolute -bottom-10 left-1/2 transform -translate-x-1/2">
+        <div class="flex items-center justify-center mt-8">
             <div class="w-20 h-20 bg-white rounded-full flex items-center justify-center shadow-lg">
                 <i class="fas fa-utensils text-3xl text-red-400"></i>
             </div>
