--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
                 <h2 class="title-font text-3xl md:text-4xl font-bold text-red-500 mb-6">My Cooking Story</h2>
                 <div class="grid md:grid-cols-2 gap-8 items-center">
                     <div>
-                        <p class="text-lg mb-4">It all started when I burned my first grilled cheese sandwich at age 12. Since then, I've been on a mission to conquer the kitchen, one recipe at a time!</p>
-                        <p class="text-lg mb-6">From disastrous cakes to restaurant-worthy pasta dishes, every mistake has been a lesson and every success a celebration.</p>
+                        <p class="text-lg mb-4">It all started when I first saw my parents cooking at age 5. Since then, I've been learning my family's recipes in a <strong>mission to conquer the kitchen</strong>, one recipe at a time!</p>
+                        <p class="text-lg mb-6">From disastrous steaks to restaurant-worthy stir-fry dishes, every mistake has been a lesson and every success a celebration.</p>
                         <div class="flex flex-wrap gap-3">
-                            <span class="px-4 py-2 bg-yellow-100 text-yellow-800 rounded-full">#PastaLover</span>
-                            <span class="px-4 py-2 bg-green-100 text-green-800 rounded-full">#BakingQueen</span>
+                            <span class="px-4 py-2 bg-yellow-100 text-yellow-800 rounded-full">#AsianFood</span>
+                            <span class="px-4 py-2 bg-green-100 text-green-800 rounded-full">#KitchenKing</span>
                             <span class="px-4 py-2 bg-red-100 text-red-800 rounded-full">#SpiceEnthusiast</span>
                         </div>
                     </div>
