fix(about): changed placeholder image to steak

--- a/index.html
+++ b/index.html
@@ -107,11 +107,7 @@
                     </div>
                     <div class="relative">
                         <div class="w-full h-64 md:h-80 bg-gradient-to-br from-yellow-200 to-red-200 rounded-2xl overflow-hidden relative">
-                            <!-- Placeholder for your image -->
-                            <div class="absolute inset-0 flex items-center justify-center">
-                                <i class="fas fa-camera text-4xl text-gray-400"></i>
-                                <p class="ml-2 text-gray-500">Your cooking photo here</p>
-                            </div>
+                            <img src="images/PXL_20250117_033914082.PORTRAIT.jpg" alt="Cut Steak Photo" class="absolute inset-0 w-full h-full object-cover">
                         </div>
                         <div class="absolute -top-4 -right-4 bg-white p-3 rounded-full shadow-lg">
                             <i class="fas fa-heart text-2xl text-red-400"></i>
