--- a/index.html
+++ b/index.html
@@ -126,8 +126,10 @@
                 <div class="bg-white rounded-2xl overflow-hidden shadow-lg transition duration-300 gallery-item">
                     <div class="h-48 bg-gradient-to-r from-purple-300 to-blue-300 relative">
                         <!-- Placeholder for your image -->
-                        <div class="absolute inset-0 flex items-center justify-center">
-                            <i class="fas fa-image text-3xl text-white opacity-70"></i>
+                        <div class="absolute inset-0 flex items-center justify-center space-x-2">
+                            <img src="images/PXL_20250331_021054980.PORTRAIT.jpg" alt="Cut Pork Shoulder Photo" class="w-1/3 h-full object-cover">
+                            <img src="images/PXL_20250331_022501457.PORTRAIT.jpg" alt="Photo" class="w-1/3 h-full object-cover">
+                            <img src="images/PXL_20250331_043020380.jpg" alt="Another Dish Photo" class="w-1/3 h-full object-cover">
                         </div>
                     </div>
                     <div class="p-6">
@@ -135,9 +137,9 @@
                             <div class="w-8 h-8 bg-yellow-400 rounded-full flex items-center justify-center mr-3">
                                 <i class="fas fa-trophy text-white text-sm"></i>
                             </div>
-                            <h3 class="font-bold text-lg">First Perfect Risotto</h3>
+                            <h3 class="font-bold text-lg">First Perfect Caramelised Pork Stew</h3>
                         </div>
-                        <p class="text-gray-600">After 5 attempts, I finally achieved the perfect creamy texture without turning it into mush!</p>
+                        <p class="text-gray-600">After 3 attempts, I finally achieved the perfect sweet, savoury taste without turning it into mush!</p>
                     </div>
                 </div>
                 
