--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
                 <div class="bg-white rounded-2xl overflow-hidden shadow-lg transition duration-300 gallery-item">
                     <div class="h-48 bg-gradient-to-r from-purple-300 to-blue-300 relative">
                         <!-- Placeholder for your image -->
-                        <div class="absolute inset-0 flex items-center justify-center space-x-2">
+                        <div class="absolute inset-0 flex items-center justify-center">
                             <img src="images/PXL_20250331_021054980.PORTRAIT.jpg" alt="Cut Pork Shoulder Photo" class="w-1/3 h-full object-cover">
-                            <img src="images/PXL_20250331_022501457.PORTRAIT.jpg" alt="Photo" class="w-1/3 h-full object-cover">
-                            <img src="images/PXL_20250331_043020380.jpg" alt="Another Dish Photo" class="w-1/3 h-full object-cover">
+                            <img src="images/PXL_20250331_022501457.PORTRAIT.jpg" alt="Pork Shoulder Herbs Photo" class="w-1/3 h-full object-cover">
+                            <img src="images/PXL_20250331_043020380.jpg" alt="Pork Shoulder Stew Complete" class="w-1/3 h-full object-cover">
                         </div>
                     </div>
                     <div class="p-6">
