--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
                     <div class="h-48 bg-gradient-to-r from-green-300 to-teal-300 relative">
                         <!-- Placeholder for your image -->
                         <div class="absolute inset-0 flex items-center justify-center">
-                            <i class="fas fa-image text-3xl text-white opacity-70"></i>
+                            <img src="images/PXL_20250322_032908456.PORTRAIT.ORIGINAL.jpg" alt="Thai Red Curry" class="w-1/2 h-full object-cover">
+                            <img src="images/PXL_20250322_034731263.PORTRAIT.jpg" alt="Cooking Thai Red Curry" class="w-1/2 h-full object-cover">
                         </div>
                     </div>
                     <div class="p-6">
@@ -156,9 +157,9 @@
                             <div class="w-8 h-8 bg-red-400 rounded-full flex items-center justify-center mr-3">
                                 <i class="fas fa-fire text-white text-sm"></i>
                             </div>
-                            <h3 class="font-bold text-lg">Homemade Chili Mastery</h3>
+                            <h3 class="font-bold text-lg">Homemade Thai Red Curry Mastery</h3>
                         </div>
-                        <p class="text-gray-600">Developed my signature chili recipe with just the right amount of heat and smokiness.</p>
+                        <p class="text-gray-600">Developed my family's signature Red Curry recipe with just the right amount of heat and umami.</p>
                     </div>
                 </div>
                 
@@ -167,17 +168,19 @@
                     <div class="h-48 bg-gradient-to-r from-pink-300 to-red-300 relative">
                         <!-- Placeholder for your image -->
                         <div class="absolute inset-0 flex items-center justify-center">
-                            <i class="fas fa-image text-3xl text-white opacity-70"></i>
+                            <img src="images/PXL_20250416_015528622.PORTRAIT.jpg" alt="Stir-fry Cauliflower" class="w-1/3 h-full object-cover">
+                            <img src="images/PXL_20250416_013631472.PORTRAIT.jpg" alt="Stir-fry Silverbeet and Tuna" class="w-1/3 h-full object-cover">
+                            <img src="images/PXL_20250326_231739798.PORTRAIT.jpg" alt="Stir-fry Celery and Mince" class="w-1/3 h-full object-cover">
                         </div>
                     </div>
                     <div class="p-6">
                         <div class="flex items-center mb-3">
                             <div class="w-8 h-8 bg-blue-400 rounded-full flex items-center justify-center mr-3">
-                                <i class="fas fa-birthday-cake text-white text-sm"></i>
+                                <i class="fas fa-fire-alt text-white text-sm"></i>
                             </div>
-                            <h3 class="font-bold text-lg">3-Layer Birthday Cake</h3>
+                            <h3 class="font-bold text-lg">Stir-Fry Technique Acquired</h3>
                         </div>
-                        <p class="text-gray-600">Baked and decorated my first layered cake for a friend's birthday - it actually tasted good!</p>
+                        <p class="text-gray-600">Learned to stir-fry my first few dishes for family dinner -- it tasted great! And I could apply it to other dishes!</p>
                     </div>
                 </div>
             </div>
@@ -394,14 +397,14 @@
             // Add hover effect to gallery items
             galleryItems.forEach(item => {
                 item.addEventListener('mouseenter', function() {
-                    const icon = this.querySelector('.fa-trophy, .fa-fire, .fa-birthday-cake');
+                    const icon = this.querySelector('.fa-trophy, .fa-fire, .fa-fire-alt');
                     if (icon) {
                         icon.classList.add('animate-bounce');
                     }
                 });
                 
                 item.addEventListener('mouseleave', function() {
-                    const icon = this.querySelector('.fa-trophy, .fa-fire, .fa-birthday-cake');
+                    const icon = this.querySelector('.fa-trophy, .fa-fire, .fa-fire-alt');
                     if (icon) {
                         icon.classList.remove('animate-bounce');
                     }
